--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -1,12 +1,18 @@
 .sidebar {
 	width: $sidebar_width;
 	border-top: 5px solid #3975b7;
-	padding: $sp_5 $sp_4;
+	padding: 0;
+
 	@include media(tablet) {
 		width: 100%;
 		text-align: center;
-		border-bottom: 5px solid #3975b7;
-		margin-bottom: $sp_8;
+		border-top: 1px solid $pt_barracks;
+		border-bottom: 1px solid $pt_barracks;
+		margin-bottom: $sp_9;
+		background-color: $pt_barracks_20;
+	    margin-left: -5.62vw;
+	    margin-right: -5.62vw;
+	    width: 100vw;
 	}
 
 	.widget_nav_menu {
@@ -26,18 +32,27 @@
 		}
 	}
 
-	h3 {
-		margin-top: 0;
-		font-size: $size_9;
-		line-height: 1.2;
+	.side-menu-toggle {
+		display: none;
+		border: 1px solid $pt_barracks;
+		background-color: #ffffff;
+		color: $citadel_blue;
+		border-radius: 8px;
+		cursor: pointer;
+		width: 100%;
+		margin: 0 auto;
+
 		@include media(tablet) {
-			margin-bottom: 0;
+			display: block;
 		}
 	}
 
 	nav {
 		@include media(tablet) {
 			width: 100%;
+			white-space: nowrap;
+			overflow-x: scroll;
+			overflow-y: hidden;
 		}
 
 		ul {
@@ -47,8 +62,16 @@
 			margin-top: 0;
 
 			li {
-				margin-bottom: $sp_3;
 				line-height: 1.3;
+			    padding: $sp_3 0;
+			    border-bottom: 1px solid $pt_barracks;
+
+			    @include media(tablet) {
+					border-bottom: none;
+					display: inline-block;
+					padding: 0;
+			    	border-right: 1px solid $pt_barracks;
+				}
 
 				&:last-child {
 					margin-bottom: 0;
@@ -60,15 +83,15 @@
 				border-bottom-color: #ffffff;
 				font-weight: bold;
 
+				@include media(tablet) {
+					padding: $sp_3 $sp_4;
+					display: block;
+					border-bottom: none;
+				}
+
 				&:hover {
 					border-bottom-color: $citadel_blue;
 				}
-			}
-
-			.sub-menu {
-				display: none;
-				margin-top: $sp_2;
-				padding: 0 0 0 $sp_3;
 			}
 		}
 	}
@@ -103,8 +126,21 @@
 #leftmenu {
 
 	@include media(tablet) {
+		padding: 0;
+		margin: 0;
+		text-align: left;
+    }
+
+    // .menu-item:not(.current-menu-parent):not(.current-menu-item) {
+    // 	display: none;
+    // }
+
+    > .menu-item {
+    	display: block;
+    }
+
+    .sub-menu {
     	display: none;
-		padding: $sp_4 0 0;
     }
 
 	.current-menu-item {
@@ -118,7 +154,19 @@
 			font-family: "Font Awesome 5 Free";
 			font-weight: 900;
 			content: "\f30b";
+
+			@include media(tablet) {
+				content: none;
+			}
 		}
+
+		&.menu-item-has-children {
+
+			> .sub-menu {
+				display: block;
+			}
+		}
+		
 	}
 
 	> :last-child {
